examples/test/testpolicy15766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15766
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
          key4: value31
          key36: value6
      podSelector:
        matchLabels:
          key8: value8
          key29: value3
